Fixed align on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,11 @@ body {
   text-align: center;
   font-family: 'Press Start 2P', cursive;
 }
+@media (max-width: 450px) {
+	#content {
+		width: 100%;
+	}
+}
 h1, h3 {
 	margin:0;
 }
@@ -60,10 +65,4 @@ a {
 	0% {transform: rotate(0deg)}
 	50% {transform: rotate(180deg)}
     100% {transform: rotate(360deg)}
-}
-
-@media (min-width: 320px) {
-	div {
-		width: 100%;
-	}
 }
